// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log Model actions can update a log 1`] = `
Object {
  "amount": 999,
  "category": "INCOME",
  "date": 1581819204152,
  "type": "INCOME",
}
`;

exports[`Log Model actions can update a log 2`] = `
Array [
  Object {
    "op": "replace",
    "path": "/amount",
    "value": 999,
  },
  Object {
    "op": "replace",
    "path": "/category",
    "value": "HOUSEHOLD",
  },
  Object {
    "op": "replace",
    "path": "/date",
    "value": 1581819204152,
  },
  Object {
    "op": "replace",
    "path": "/type",
    "value": "INCOME",
  },
  Object {
    "op": "replace",
    "path": "/category",
    "value": "INCOME",
  },
]
`;

exports[`Log Model can create an instance 1`] = `
Object {
  "amount": 500,
  "category": "FOOD",
  "date": 1581819204151,
  "type": "EXPENSE",
}
`;

exports[`Records Model actions can record a log 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/logs/0",
    "value": Object {
      "amount": 500,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "EXPENSE",
    },
  },
  Object {
    "op": "add",
    "path": "/logs/1",
    "value": Object {
      "amount": 500,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "INCOME",
    },
  },
]
`;

exports[`Records Model actions can remove all logs 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/logs/0",
    "value": Object {
      "amount": 1000,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "INCOME",
    },
  },
  Object {
    "op": "add",
    "path": "/logs/1",
    "value": Object {
      "amount": 500,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "EXPENSE",
    },
  },
  Object {
    "op": "add",
    "path": "/logs/2",
    "value": Object {
      "amount": 500,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "EXPENSE",
    },
  },
  Object {
    "op": "remove",
    "path": "/logs/0",
  },
  Object {
    "op": "remove",
    "path": "/logs/0",
  },
  Object {
    "op": "remove",
    "path": "/logs/0",
  },
]
`;

exports[`Records Model can create a log record with defaults 1`] = `
Object {
  "account": "CASH_IN_HAND",
  "logs": Array [],
}
`;

exports[`Records Model can create a log record with defaults 2`] = `
Object {
  "account": "CASH_IN_HAND",
  "logs": Array [
    Object {
      "amount": 500,
      "category": "FOOD",
      "date": 1581819204151,
      "type": "EXPENSE",
    },
  ],
}
`;

exports[`Records Model views getLogsByDayOfMonth to return map of logs with (month + day) as property 1`] = `
Object {
  "Feb 01": Array [
    Object {
      "amount": 1,
      "category": "FOOD",
      "date": 1580498640000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 3,
      "category": "FOOD",
      "date": 1580486400000,
      "type": "EXPENSE",
    },
  ],
  "Feb 14": Array [
    Object {
      "amount": 6,
      "category": "FOOD",
      "date": 1581609600000,
      "type": "EXPENSE",
    },
  ],
}
`;

exports[`Records Model views getLogsByDayOfMonth to return map of logs with (month + day) as property 2`] = `
Object {
  "Sep 10": Array [
    Object {
      "amount": 5,
      "category": "FOOD",
      "date": 1631203200000,
      "type": "EXPENSE",
    },
  ],
}
`;

exports[`Records Model views getLogsByDayOfMonth to return map of logs with (month + day) as property 3`] = `
Object {
  "Mar 01": Array [
    Object {
      "amount": 4,
      "category": "FOOD",
      "date": 1582992000000,
      "type": "EXPENSE",
    },
  ],
}
`;

exports[`Records Model views getLogsByMonth to return array of logs by month & year 1`] = `
Object {
  "account": "CASH_IN_HAND",
  "logs": Array [
    Object {
      "amount": 1,
      "category": "FOOD",
      "date": 1580498640000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 2,
      "category": "FOOD",
      "date": 1577820240000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 3,
      "category": "FOOD",
      "date": 1580486400000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 4,
      "category": "FOOD",
      "date": 1582992000000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 5,
      "category": "FOOD",
      "date": 1631203200000,
      "type": "EXPENSE",
    },
    Object {
      "amount": 6,
      "category": "FOOD",
      "date": 1581609600000,
      "type": "EXPENSE",
    },
  ],
}
`;

exports[`Records Model views getLogsByMonth to return array of logs by month & year 2`] = `
Array [
  Object {
    "amount": 1,
    "category": "FOOD",
    "date": 1580498640000,
    "type": "EXPENSE",
  },
  Object {
    "amount": 3,
    "category": "FOOD",
    "date": 1580486400000,
    "type": "EXPENSE",
  },
  Object {
    "amount": 6,
    "category": "FOOD",
    "date": 1581609600000,
    "type": "EXPENSE",
  },
]
`;
